Brink Theme/Brink.css
/* "Brink" by Valerio Lyndon
 * Version 2.0.2
 * 
 * = TABLE OF CONTENTS =
 * 
 ! IMPORTS
 * 
 ! VARIABLES
 @ User
 @ Internal
 * 
 ! PAGE-BASE
 @ Scrollbars
 @ Generic
 @ Containers
 * 
 ! HEADER
 * 
 ! USER-MENU
 * 
 ! BANNER
 * 
 ! STATUS-MENU
 @ Search
 * 
 ! SORT-BUTTONS
 @ Filters
 @ Sort-By
 * 
 ! LIST
 @ Item-Base
 @ Image
 @ Status
 @ Title
 @ Notes
 @ Progress/Score
 @ Tags
 @ Number
 @ Type
 @ Rated
 @ Season
 @ Genre/Demographic/Studio/Licensor/Magazine
 @ Dates
 @ Priority
 @ Storage
 @ More-Info
 @ Loading-Icon
 * 
 ! OVERLAYS
 @ GDPR
 @ Streaming
 @ iFrames
 @ Rewatch-Box
 @ Filter-Menu
 * 
 ! FOOTER
 * 
 ! MEDIA-QUERIES
 * 
 ! FIXES
 * 
 ! MODS
 */


/*==============================*\
  !IMPORTS
\*------------------------------*/

@\import "https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap";
@\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/resources/font-awesome-4.7.0/css/font-awesome-force-legacy.min.css";


/*==============================*\
  !VARIABLES @User
\*------------------------------*/

:root {
	/* USER OPTIONS
	 * 
	 * toggleStats / Toggles list statistics (found in the footer)
	 * valid values: visible / hidden
	 * 
	 * toggleStreaming / Toggles anime streaming service button.
	 * valid values: visible / hidden
	 * 
	 * toggleTopRating(Gold/Silver/Bronze) / Toggles banners on top of highly rated items.
	 * valid values: visible / hidden
	 * 
	 * bgDimness / Changes dimming of background image / Higher = Dimmer.
	 * min value: 0% / max value: 100%
	 * 
	 * bannerVignetteOpacity / Changes opacity of banner image vignette / Higher = More Opaque.
	 * min value: 0% / max value: 100%
	 * 
	 * imageBrightness(Hov) / Changes lightness of cover images / Higher = Brighter.
	 * min value: 0% / max value: 100%
	 * 
	 * imageBlurHov / Changes blurring of cover images / Higher = More
	 * valid values: any positive number value, ending in "px"
	 * 
	 * imageFade / Changes fading effect on bottom of cover images / Higher = More
	 * min value: 0 / max value: 1
	 * 
	 * infoBGOpacity / Changes opacity of background on list items for improved readability / Set to 0% to hide
	 * min value: 0% / max value: 100%
	 * 
	 * numberOpacity / Changes opacity of number text (or whichever column is in its place) / Higher = More opaque
	 * min value: 0% / max value: 100%
	 */
	
	--toggleStats: hidden;
	--toggleStreaming: visible;
	--toggleTopRatingGold: visible;
	--toggleTopRatingSilver: visible;
	--toggleTopRatingBronze: hidden;
	--bgDimness: 50%;
	--bannerVignetteOpacity: 90%;
	--imageBrightness: 85%;
	--imageBrightnessHov: 50%;
	--imageBlurHov: 2px;
	--imageFade: .95;
	--infoBGOpacity: 0%;
	--numberOpacity: 80%;
	
	/* THEME COLOURS
	 * 
	 * Colours are HSL values but without their surrounding parentheses.
	 * To get the correct values, simply strip away the surrounding parentheses and blurb.
	 * For instance, "hsl(244, 42%, 82%)" would simply become "244, 42%, 82%".
	 * For help with HSL: https://www.w3schools.com/colors/colors_hsl.asp
	 * 
	 * For help with what each colour controls, see the forum post: https://myanimelist.net/forum/?topicid=1772180
	 */
	
	--bg: 240, 3%, 9%;
	--bgAlt: 240, 3%, 14%;
	--btn: 240, 3%, 16%;
	--btnAlt: 240, 3.5%, 21%;
	--btnLight: 240, 100%, 94%, 4%;
	--btnAccent: 240, 17%, 34%;
	--accent: 240, 75%, 77%;
	
	--text: 0, 0%, 100%;
	--textProminent: 27, 87%, 67%;
	--textLinkHov: 240, 50%, 80%;
	
	--current: 35, 49%, 46%;
	--completed: 324, 49%, 46%;
	--paused: 80, 91%, 23%;
	--dropped: 6, 44%, 46%;
	--planned: 56, 18%, 56%;
	
	--goldRating: 32.5, 100%, 71%;
	--silverRating: 0, 0%, 80%;
	--bronzeRating: 25, 55%, 59%;
}


/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
  @Internal
\*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

:root {
	/* INTERNALS
	 * 
	 * More advanced variables.
	 * Changing the font incorrectly may result in visual bugs.
	 */
	
	--listW: 100vw;
	
	--font: "Sarabun", "Segoe UI", "Arial", "FontAwesome 4", "FontAwesome", sans-serif;
	
	--timeText: 60ms;
	--timeButton: 160ms;
	--timeButtonLarge: 260ms;
	--timeItem: 120ms;
	--timeMenu: 350ms;
	--bezierFast: cubic-bezier(.38,.32,.25,1);
	--bezierSmooth: cubic-bezier(.45,.32,.25,1);
	--bezierItemBounce: cubic-bezier(.6,.48,.7,1.45);
	--delayMenu: 333.4ms;
	
	/* These SVGs will not display to non-list-owners.
	 * Find the images for other users in the !FIXES section.
	 */
	--arrowUp: url(https://files.catbox.moe/uure2q.svg);
	--arrowRt: url(https://files.catbox.moe/lqi5fy.svg);
	--arrowDn: url(https://files.catbox.moe/m9ot24.svg);
	--arrowLt: url(https://files.catbox.moe/68o5bn.svg);
}


/*==============================*\
  !PAGE-BASE @Scrollbars
\*------------------------------*/

/* Firefox */

* {
	scrollbar-color: hsl(var(--accent)) hsl(var(--bgAlt));
}

.list-item * {
	scrollbar-color: hsl(var(--accent)) transparent;
}

.data.tags, textarea {
	scrollbar-width: thin;
}

/* Chrome */

*::-webkit-scrollbar {
	width: 15px;
	background: hsl(var(--bgAlt));
}

*::-webkit-scrollbar-button:vertical {
	background: center / 10px auto no-repeat transparent;
} *::-webkit-scrollbar-button:vertical:start {
	background-image: var(--arrowUp);
} *::-webkit-scrollbar-button:vertical:end {
	background-image: var(--arrowDn);
} *::-webkit-scrollbar-button:horizontal {
	background: center / auto 10px no-repeat transparent;
} *::-webkit-scrollbar-button:horizontal:start {
	background-image: var(--arrowLt);
} *::-webkit-scrollbar-button:horizontal:end {
	background-image: var(--arrowRt);
}

*::-webkit-scrollbar-corner {
	background: hsl(var(--bgAlt));
}

*::-webkit-scrollbar-thumb {
	background: hsl(var(--accent)) content-box;
	border: 0 solid transparent;
	border-radius: 2px;
} *::-webkit-scrollbar-thumb:vertical {
	border-width: 0 2px;
} *::-webkit-scrollbar-thumb:horizontal {
	border-width: 2px 0;
} *::-webkit-scrollbar-thumb:hover {
	background-color: hsla(var(--accent), 70%);
}

.list-item *::-webkit-scrollbar {
	background: transparent;
}
/* ... */

